# abletonian

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  daw-targets.md  strategic-directions.md  vision.md
docs/ableton-survey/: survey.md
src/abletonian/: __init__.py  cli.py  config.py  daws.py  server.py
src/abletonian/bridge/: __init__.py  client.py  protocol.py
tests/: __init__.py  _bootstrap.py  test_config.py  test_daws.py  test_protocol.py
